- Fix bug that caused Alien Puzzles to break
- Fix Expedition images
- Fix Expedition Milestone items display on smaller devices
- Add consumption reward text to game items - Thank you Lenni for investigating how to extract the specific data
  

For more details on this update please visit the "What is New" page in the Apps or on the website
