@@ -89,3 +89,4 @@ ios/build/*
 /android/releaseAppCenterKey.properties
 /android/releaseCIKey.properties
 /android/releaseKey.properties
+desktop.ini
