@@ -1,4 +1,4 @@
-name: aassistantnms_app
+name: assistantnms_app
 description: Assistant for No Man's Sky
 homepage: https://nmsassistant.com
 # author: Kurt Lourens
@@ -18,8 +18,8 @@ dependencies:
 
   # AssistantApps
   assistantapps_flutter_common:
-    git: https://github.com/AssistantApps/Flutter.Common.git
-    # path: 'C:\Development\Projects\AssistantApps\assistantapps_flutter_common'
+    # git: https://github.com/AssistantApps/Flutter.Common.git
+    path: 'C:\Development\Projects\AssistantApps\assistantapps_flutter_common'
 
   # Firebase
   firebase_core: 1.11.0
@@ -53,6 +53,7 @@ dependencies:
   custom_refresh_indicator: 1.0.0
   dots_indicator: 2.0.0
   expandable: 5.0.1
+  ff_stars: 1.0.0
   flutter_simple_treeview: 3.0.0-nullsafety.1
   flutter_speed_dial: 5.0.0+1 # Move to AA?
   flutter_sticky_header: 0.6.0
